# MetaLLM

./: .gitignore  ARCHITECTURE.md  BUILD_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLI_GUIDE.md  LICENSE  MODULE_LIBRARY.md  PROGRESS_REPORT.md  README.md  SECURITY.md  SETUP_COMPLETE.md  STATUS.md  metallm.py  pyproject.toml  requirements.txt  setup.py  structlog.py  test_cli.py  test_new_module.py
cli/: __init__.py  commands.py  completer.py  console.py  formatter.py
docs/: ARCHITECTURE.md  ATTACK_SCENARIOS.md  DEVELOPMENT.md  MODULES.md  MODULE_REFERENCE.md  RESEARCH_PAPER_ASSESSMENT.md  SECURITY.md  USAGE.md  USER_GUIDE.md
docs/lab/: DEPLOYMENT_GUIDE.md  GCP_TEST_LAB_ARCHITECTURE.md
infrastructure/gcp/: README.md  deploy.sh
infrastructure/gcp/scripts/: setup_control_node.sh  setup_langchain.sh  setup_mlflow.sh  setup_ollama.sh  setup_qdrant.sh  setup_vllm.sh
infrastructure/gcp/terraform/: instances.tf  network.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
metaLLM/: __init__.py  __main__.py
metaLLM/base/: module.py  option.py  payload.py  result.py  target.py
metaLLM/cli/: __init__.py  commands.py  console.py  output.py
metaLLM/core/: config.py  db.py  framework.py  llm_client.py  logger.py  module_loader.py  reporting.py  session.py  session_manager.py  target_manager.py
modules/auxiliary/: __init__.py  base.py
modules/auxiliary/discovery/: __init__.py  model_registry_scan.py  training_infra_disc.py  vector_db_enum.py
modules/auxiliary/dos/: __init__.py  context_overflow.py  rate_limit_test.py  token_exhaustion.py
modules/auxiliary/fingerprint/: __init__.py  capability_prober.py  embedding_model_id.py  llm_model_detector.py  safety_filter_detect.py
modules/auxiliary/llm/: fingerprint.py  fuzzer.py
modules/auxiliary/scanner/: __init__.py  agent_framework_detect.py  ai_service_port_scan.py  llm_api_scanner.py  mlops_discovery.py  rag_endpoint_enum.py
modules/exploits/: base.py
modules/exploits/agent/: autogpt_goal_corruption.py  crewai_task_manipulation.py  goal_hijacking.py  langchain_rce.py  langchain_tool_injection.py  mcp_tool_poisoning.py  memory_manipulation.py  plugin_abuse.py  protocol_message_injection.py  tool_misuse.py
modules/exploits/api/: api_key_extraction.py  excessive_agency.py  unauthorized_access.py
modules/exploits/llm/: adaptive_jailbreak.py  context_manipulation.py  encoding_bypass.py  flipattack.py  (+7 more)
modules/utils/: logger.py
tests/: test_base.py  test_integration_ollama.py
tests/integration/: test_agent_framework_attack.py  test_mlops_pipeline_attack.py  test_network_level_attack.py
(+20 files in other folders)
